--- a/src/index.css
+++ b/src/index.css
@@ -1,82 +1,21 @@
-html, body, #root {
-  height: 100%;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+@import "tailwindcss";
+@import "tailwindcss/theme.css" layer(theme);
+@import "tailwindcss/utilities.css" layer(utilities);
+@import "tailwindcss/preflight.css" layer(base);
+
+@layer theme, base, components, utilities;
+
+:root {
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-nav {
-  padding: 0 0.5rem;
-}
-
-.app-wrapper {
-  min-height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-.content {
-  flex: 1;
-}
-
-.progress {
-  margin-top: 2rem;
-  padding: 0.15rem;
-}
-
-.footer {
-  flex-shrink: 0;
-}
-
-.movies {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 1rem;
-}
-
-.movie {
-  display: flex;
-  flex-direction: column;
-}
-
-.card-content {
-  margin-top: auto;
-}
-
-.card-image {
-  width: 100%;
-  height: 400px; /* Здесь вы можете указать желаемый фиксированный размер по высоте */
-  overflow: hidden; /* скрываем всё, что выходит за пределы контейнера */
-}
-
-.card-image img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover; /* обрезаем пропорционально по центру */
-  object-position: center; /* центрируем обрезку по центру */
-}
-
-.movie-title {
-  font-weight: bold;
-}
-
-.search {
-  margin: 1rem 0;
-}
-
-.not-found {
-  color: #b5d0e4;
-}
-
-.search-btn {
-  position: absolute;
-  top: 0.3rem;
-  right: 0.3rem;
-}
-
-label:not(:last-child) {
-  margin-right: 1rem;
+body {
+  @apply bg-radial from-indigo-500 from-10% to-slate-900 to-90% text-white;
 }
